Hvis det ikke eksisterer perioder forut for segmentet så hoppes dette over